@@ -23,7 +23,7 @@
 			<posy>5</posy>
 			<width>88</width>
 			<height>88</height>
-			<texture>t3chu-logo.png</texture>
+			<texture>script-logo.png</texture>
 			<aspectratio>keep</aspectratio>
 			<animation effect="rotate" start="90" end="0" center="0,0" time="200" condition="!Skin.HasSetting(animated)">WindowOpen</animation>
 		</control>
